var searchData=
[
  ['data_0',['data',['../db/d35/structlogika_1_1meters_1_1HistoricalSeries.html#a514180fa068294acbad0d1cf72a43310',1,'logika::meters::HistoricalSeries::data'],['../d4/d9a/structlogika_1_1protocols_1_1M4_1_1Packet.html#a489d9c0fc27e89a0f1ab260bab9ecce4',1,'logika::protocols::M4::Packet::data']]],
  ['data_5ftable_2ecpp_1',['data_table.cpp',['../d9/dcf/data__table_8cpp.html',1,'']]],
  ['data_5ftable_2ehpp_2',['data_table.hpp',['../db/dbf/data__table_8hpp.html',1,'']]],
  ['data_5ftable_2eipp_3',['data_table.ipp',['../d8/dce/data__table_8ipp.html',1,'']]],
  ['data_5ftag_2ecpp_4',['data_tag.cpp',['../d6/d1b/data__tag_8cpp.html',1,'']]],
  ['data_5ftag_2eh_5',['data_tag.h',['../d6/da8/data__tag_8h.html',1,'']]],
  ['data_5ftag_2eipp_6',['data_tag.ipp',['../d1/d42/data__tag_8ipp.html',1,'']]],
  ['data_5ftag6_2ecpp_7',['data_tag6.cpp',['../dd/d09/data__tag6_8cpp.html',1,'']]],
  ['data_5ftag6_2eh_8',['data_tag6.h',['../d1/d52/data__tag6_8h.html',1,'']]],
  ['data_5ftag_5fdef_2ecpp_9',['data_tag_def.cpp',['../dc/d18/data__tag__def_8cpp.html',1,'']]],
  ['data_5ftag_5fdef_2eh_10',['data_tag_def.h',['../d4/db4/data__tag__def_8h.html',1,'']]],
  ['data_5ftag_5fdef6_2ecpp_11',['data_tag_def6.cpp',['../d8/d36/data__tag__def6_8cpp.html',1,'']]],
  ['data_5ftag_5fdef6_2eh_12',['data_tag_def6.h',['../dd/d36/data__tag__def6_8h.html',1,'']]],
  ['data_5ftypes_2ecpp_13',['data_types.cpp',['../db/de0/data__types_8cpp.html',1,'']]],
  ['data_5ftypes_2eh_14',['data_types.h',['../d3/ddc/data__types_8h.html',1,'']]],
  ['data_5ftypes_5fh_15',['DATA_TYPES_H',['../d3/ddc/data__types_8h.html#a70fab293c171d1b09631d9c08673cd5b',1,'data_types.h']]],
  ['dataaddress_5f_16',['dataAddress_',['../d4/d7c/classlogika_1_1protocols_1_1M4_1_1FlashArray.html#a7dd7d33f3e5676b13b1c8ab192a22128',1,'logika::protocols::M4::FlashArray']]],
  ['databits_5f_17',['dataBits_',['../d4/d4f/classlogika_1_1connections_1_1SerialConnection.html#a4fc495555cce38a459a618277ddfb904',1,'logika::connections::SerialConnection']]],
  ['databitstostring_18',['DataBitsToString',['../df/da9/namespacelogika_1_1connections.html#a29fb75a1247702037121c00b3f8219b9',1,'logika::connections']]],
  ['datatable_19',['DataTable',['../d3/dca/classlogika_1_1meters_1_1DataTable.html',1,'logika::meters::DataTable'],['../d3/dca/classlogika_1_1meters_1_1DataTable.html#a927f2124aaa9f3254f8ef827a5b5e1cd',1,'logika::meters::DataTable::DataTable(const std::vector&lt; FieldType &gt; &amp;fieldList=std::vector&lt; FieldType &gt;{})'],['../d3/dca/classlogika_1_1meters_1_1DataTable.html#ab7bb03b859abfcd0922c8387941546f3',1,'logika::meters::DataTable::DataTable(const DataTable &amp;)=delete']]],
  ['datatag_20',['DataTag',['../d9/d53/classlogika_1_1meters_1_1DataTag.html',1,'logika::meters::DataTag'],['../d9/d53/classlogika_1_1meters_1_1DataTag.html#a743bca0f354373ecf263b03292c62213',1,'logika::meters::DataTag::DataTag()'],['../dc/df7/namespacelogika_1_1meters.html#a47bb51a40b7092685b7ebef95780a676',1,'logika::meters::DataTag']]],
  ['datatag6container_21',['DataTag6Container',['../db/d12/classlogika_1_1meters_1_1DataTag6Container.html',1,'logika::meters::DataTag6Container'],['../db/d12/classlogika_1_1meters_1_1DataTag6Container.html#ac1360475c6db3089ba1bdf6676894660',1,'logika::meters::DataTag6Container::DataTag6Container()']]],
  ['datatagdef_22',['DataTagDef',['../da/dcc/classlogika_1_1meters_1_1DataTagDef.html',1,'logika::meters::DataTagDef'],['../da/dcc/classlogika_1_1meters_1_1DataTagDef.html#ae67e3934dfca5c8abba683675b317b16',1,'logika::meters::DataTagDef::DataTagDef()']]],
  ['datatagdef6_23',['DataTagDef6',['../d1/dcb/classlogika_1_1meters_1_1DataTagDef6.html',1,'logika::meters::DataTagDef6'],['../d1/dcb/classlogika_1_1meters_1_1DataTagDef6.html#a4cada62b58d39161cca83b2c5789d258',1,'logika::meters::DataTagDef6::DataTagDef6()']]],
  ['datatagdef6settings_24',['DataTagDef6Settings',['../d5/d2d/structlogika_1_1meters_1_1DataTagDef6Settings.html',1,'logika::meters']]],
  ['datatagdef_5f_25',['dataTagDef_',['../d9/d53/classlogika_1_1meters_1_1DataTag.html#ada68087a58d878934694e3fe36c5148d',1,'logika::meters::DataTag::dataTagDef_'],['../db/d12/classlogika_1_1meters_1_1DataTag6Container.html#a30d54b3569cc5065127e494b3fa2241a',1,'logika::meters::DataTag6Container::dataTagDef_']]],
  ['datatagdefsettings_26',['DataTagDefSettings',['../d1/dd1/structlogika_1_1meters_1_1DataTagDefSettings.html',1,'logika::meters']]],
  ['datatagdefvault_27',['DataTagDefVault',['../d3/d03/classlogika_1_1meters_1_1DataTagDefVault.html',1,'logika::meters::DataTagDefVault'],['../d3/d03/classlogika_1_1meters_1_1DataTagDefVault.html#aeb9792dd7bbd07dcf22a70b76199f194',1,'logika::meters::DataTagDefVault::DataTagDefVault()'],['../dc/df7/namespacelogika_1_1meters.html#a774ce986b0735e0e5ac5f7cf77bd102a',1,'logika::meters::DataTagDefVault']]],
  ['datatype_28',['dataType',['../d8/d46/structlogika_1_1meters_1_1ColumnInfo.html#a44a525cb6ac37e9f5df2cb90d14275be',1,'logika::meters::ColumnInfo']]],
  ['datatypefromstring_29',['DataTypeFromString',['../dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#aff65ceaa81e273188f7af5df55f53fbf',1,'logika_migration::EnumsStringToPb']]],
  ['date_30',['Date',['../d6/d1f/namespacelogika_1_1meters_1_1BinaryType4L.html#ae46513347c4ea0ea5563977484872d90a5d7a4a87890abb8dc4881ea34e95a73a',1,'logika::meters::BinaryType4L::Date'],['../d0/d25/namespacelogika_1_1meters_1_1TagId4M.html#ad5d432462a0eeb320d2d0b444052c7eaa9c6d6e7e159d7a5b0c3394e3ad2d1c94',1,'logika::meters::TagId4M::Date']]],
  ['day_31',['Day',['../d7/d3a/namespacelogika_1_1protocols_1_1ArchiveId4M.html#ab88190bc350c526dc4f31d42cbffdb09a42201e3da0ed0f55918f3965a9ea6c23',1,'logika::protocols::ArchiveId4M']]],
  ['dbentry_32',['DbEntry',['../d6/d1f/namespacelogika_1_1meters_1_1BinaryType4L.html#ae46513347c4ea0ea5563977484872d90a51a7f85b71bf0cc049f41d9d59d61ea1',1,'logika::meters::BinaryType4L']]],
  ['dbentrybyte_33',['DbEntryByte',['../d6/d1f/namespacelogika_1_1meters_1_1BinaryType4L.html#ae46513347c4ea0ea5563977484872d90a3d79db97581940c4656407d9390b1e62',1,'logika::meters::BinaryType4L']]],
  ['dbtype_34',['dbType',['../d0/de8/structlogika_1_1meters_1_1TagDefSettings.html#ab6c520a32b8da86249afeb13a1d84dfc',1,'logika::meters::TagDefSettings']]],
  ['dbtype_35',['DbType',['../dc/df7/namespacelogika_1_1meters.html#a3c9c221a1135a439bbbaf4a504c70fef',1,'logika::meters']]],
  ['dbtypestr_5f_36',['dbTypeStr_',['../d5/dfb/classlogika_1_1meters_1_1TagDef.html#a3b11f6b690764e2a41b0e56c626c03bc',1,'logika::meters::TagDef']]],
  ['dbtypetostring_37',['DbTypeToString',['../dc/df7/namespacelogika_1_1meters.html#ad7d6c2cfba017c8df878d1831b58cd50',1,'logika::meters']]],
  ['dec_38',['Dec',['../d7/d3a/namespacelogika_1_1protocols_1_1ArchiveId4M.html#ab88190bc350c526dc4f31d42cbffdb09aeed91d9f20795ca458d0496492da9aab',1,'logika::protocols::ArchiveId4M']]],
  ['decompress_39',['Decompress',['../df/d57/classlogika_1_1protocols_1_1FastLzImpl.html#a33ef140eb4f20d9bfd1338562261ef22',1,'logika::protocols::FastLzImpl']]],
  ['def_5f_40',['def_',['../d1/d29/classlogika_1_1meters_1_1Tag.html#a6c1bd48999855179054acbc66c1821de',1,'logika::meters::Tag']]],
  ['defines_2eh_41',['defines.h',['../d8/db0/defines_8h.html',1,'']]],
  ['defs_2eh_42',['defs.h',['../dd/da1/common_2defs_8h.html',1,'(Глобальное пространство имён)'],['../d1/d90/connections_2defs_8h.html',1,'(Глобальное пространство имён)'],['../d6/d8e/log_2defs_8h.html',1,'(Глобальное пространство имён)'],['../da/da6/meters_2converters_2defs_8h.html',1,'(Глобальное пространство имён)'],['../d2/d4b/meters_2defs_8h.html',1,'(Глобальное пространство имён)'],['../d7/d37/protocols_2defs_8h.html',1,'(Глобальное пространство имён)']]],
  ['description_43',['description',['../d0/df9/structlogika_1_1meters_1_1ArchiveDefSettings.html#a080be3fde5f4aa8895f6771d7c9a5589',1,'logika::meters::ArchiveDefSettings::description'],['../d3/dce/structlogika_1_1meters_1_1ChannelDef.html#a4188f553ef9bcf982048215a42eafe3b',1,'logika::meters::ChannelDef::description'],['../dd/d9b/structlogika_1_1meters_1_1ServiceRecord.html#a0b4781fe543f8dacfb2a27ad13a82f3f',1,'logika::meters::ServiceRecord::description'],['../d0/de8/structlogika_1_1meters_1_1TagDefSettings.html#a745faab6c8c4f58ff023216767865344',1,'logika::meters::TagDefSettings::description']]],
  ['description_5f_44',['description_',['../da/dc9/classlogika_1_1meters_1_1ItemDefBase.html#a4572e05ff3a237fab48898df8e495d2f',1,'logika::meters::ItemDefBase::description_'],['../d3/d77/classlogika_1_1meters_1_1Meter.html#abad93f4641525e5f98b92692b14a12ef',1,'logika::meters::Meter::description_']]],
  ['descriptionex_45',['descriptionEx',['../d1/dd1/structlogika_1_1meters_1_1DataTagDefSettings.html#aa640a5e5494d4a22e47a78fbcfb4f2a5',1,'logika::meters::DataTagDefSettings']]],
  ['descriptionex_5f_46',['descriptionEx_',['../da/dcc/classlogika_1_1meters_1_1DataTagDef.html#a38134a2680203769a1ebca63344a3264',1,'logika::meters::DataTagDef']]],
  ['detectm4_47',['DetectM4',['../da/d50/classlogika_1_1protocols_1_1Protocol.html#a9a6978d058fb65ac97a92cd0585ec81c',1,'logika::protocols::Protocol']]],
  ['detectx6_48',['DetectX6',['../da/d50/classlogika_1_1protocols_1_1Protocol.html#a686a36dd845b1f2b2dd8a0017f5eff35',1,'logika::protocols::Protocol']]],
  ['determinemeter_49',['DetermineMeter',['../d6/df4/classlogika_1_1meters_1_1Logika4.html#a5fa740cb860859058a32260d0e0cd3db',1,'logika::meters::Logika4']]],
  ['device_5fconverter_2ecpp_50',['device_converter.cpp',['../da/de4/device__converter_8cpp.html',1,'']]],
  ['device_5fconverter_2eh_51',['device_converter.h',['../d9/d3f/device__converter_8h.html',1,'']]],
  ['deviceconverter_52',['DeviceConverter',['../d8/d9f/classlogika_1_1meters_1_1converters_1_1DeviceConverter.html',1,'logika::meters::converters']]],
  ['devicediscovery_53',['DeviceDiscovery',['../d8/d96/namespacelogika_1_1protocols_1_1M4_1_1Opcode.html#a399fe99af47750da7459306b1ff0736ba64a4e16bec7a17a1f43610fc2c6df97e',1,'logika::protocols::M4::Opcode']]],
  ['devices_2ecpp_54',['devices.cpp',['../d9/d70/devices_8cpp.html',1,'']]],
  ['devices_2eh_55',['devices.h',['../d7/dde/devices_8h.html',1,'']]],
  ['devices_5fh_56',['DEVICES_H',['../d7/dde/devices_8h.html#a3caa0397d733033e72f0c4cc20b21368',1,'devices.h']]],
  ['dirtyindices_57',['dirtyIndices',['../d3/d00/structlogika_1_1protocols_1_1M4_1_1TvReadState4L.html#acce5377296f6bc85f5944aa6c86774ce',1,'logika::protocols::M4::TvReadState4L']]],
  ['dirtyinitialcount_58',['dirtyInitialCount',['../d3/d00/structlogika_1_1protocols_1_1M4_1_1TvReadState4L.html#ab8f425bda2e65f537f85b7b4b028d548',1,'logika::protocols::M4::TvReadState4L']]],
  ['disconnecting_59',['Disconnecting',['../df/da9/namespacelogika_1_1connections.html#aac9f3568307bb7171e2a5874a167121ea10b0501000c144cb2a7424bd45e1bcde',1,'logika::connections']]],
  ['displayformat_60',['displayFormat',['../d0/de8/structlogika_1_1meters_1_1TagDefSettings.html#af1f1df9f1320e1a408438fca7935603a',1,'logika::meters::TagDefSettings']]],
  ['displayformat_5f_61',['displayFormat_',['../d5/dfb/classlogika_1_1meters_1_1TagDef.html#a667c176fb6ff4c107fe57807b7a7bd83',1,'logika::meters::TagDef']]],
  ['displayns_62',['DisplayNs',['../d6/df4/classlogika_1_1meters_1_1Logika4.html#ad6f8baf3b2f5002ec73a77fd0624521f',1,'logika::meters::Logika4']]],
  ['dohandshake_63',['DoHandshake',['../d2/d4d/classlogika_1_1protocols_1_1M4_1_1M4Protocol.html#a13e626133daa4525e4e2144c32f87c51',1,'logika::protocols::M4::M4Protocol']]],
  ['dolegacyrequest_64',['DoLegacyRequest',['../d2/d4d/classlogika_1_1protocols_1_1M4_1_1M4Protocol.html#a82ee9b0a8dfd6574f531adc51890ada7',1,'logika::protocols::M4::M4Protocol']]],
  ['dom4request_65',['DoM4Request',['../d2/d4d/classlogika_1_1protocols_1_1M4_1_1M4Protocol.html#a88ce4a93c3212b102a5db6bfc8e837a6',1,'logika::protocols::M4::M4Protocol']]],
  ['dontgeteus_66',['DontGetEus',['../d5/d7f/namespacelogika_1_1protocols_1_1M4_1_1TagsUpdateFlags.html#af439796f1fab18dbdd0c8055d738f701a923f3ef96639372f096724f1835568c7',1,'logika::protocols::M4::TagsUpdateFlags']]],
  ['dontthrowonerrorreply_67',['DontThrowOnErrorReply',['../d8/db6/namespacelogika_1_1protocols_1_1M4_1_1RecvFlags.html#a51e53bca5dbaf18164e50d4bdd29833ba3bb5341d2b2108623dee5859bd678c7a',1,'logika::protocols::M4::RecvFlags']]],
  ['double_68',['Double',['../dc/df7/namespacelogika_1_1meters.html#a3c9c221a1135a439bbbaf4a504c70fefad909d38d705ce75386dd86e611a82f5b',1,'logika::meters']]],
  ['dp_69',['dP',['../dc/df7/namespacelogika_1_1meters.html#afb48755c238c8e35d9ffd51bf0e5dd97a488ab29adec84b0394426c82ab48b26d',1,'logika::meters']]]
];
